--- a/style.css
+++ b/style.css
@@ -33,26 +33,17 @@ body {
 
 .nav-links a {
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 14px;
   color: black;
 }
 
-.nav-links a:hover {
-  color: #ccc;
-}
-
 .sign-in .btn {
-  background-color: #333;
+  background-color: rgb(252, 63, 94);
   color: white;
   padding: 8px 16px;
-  border-radius: 4px;
+  border-radius: 5px;
   text-decoration: none;
-  font-weight: bold;
   transition: 0.3s;
-}
-
-.sign-in .btn:hover {
-  background-color: #333;
 }
 
 /* Hamburger menu (for mobile) */
@@ -81,6 +72,7 @@ body {
   #menu-toggle:checked ~ .sign-in {
     display: flex;
     flex-direction: column;
+    gap: 3rem;
   }
 
   .navbar {
@@ -102,6 +94,16 @@ body {
   .sign-in {
     order: 3;
   }
+  .right-content{
+    display: none;
+  }
+  .cube{
+    display: none;
+  }
+   .left-content{
+    width: 100%;
+    display: block;
+   }
 }
 
 
@@ -115,7 +117,7 @@ body {
      }
 
     .left-content {
-      width: 50%;
+      width: 70%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -126,18 +128,31 @@ body {
       font-size: 4rem;
       margin-bottom: 50px;
     }
+    .left-content .input {
+  color: black;
+  border: 1px solid rgb(252, 63, 94);
+  border-radius: 5px;
+  padding: 16px 25px;
+  background: transparent;
+  width: 70%;
+  margin-top: 5px;
+}
+.left-content .input:focus{
+  border: 1px solid rgb(252, 63, 94);
+  outline: none;
+}
     .contain button{
         height: 50px;
         width: 200px;
         border-radius: 5px;
-        background-color: #333;
+        background-color: rgb(252, 63, 94);
         color: white;
         border: none;
         margin-top: 20px;
     }
 
     .right-content { 
-      width: 50%;
+      width: 30%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -148,16 +163,15 @@ body {
       height: 300px;
       position: relative;
       transform-style: preserve-3d;
-      animation: rotate 100s infinite linear;
+      animation: rotate 10s infinite linear;
     }
 
     .cube div {
       position: absolute;
       width: 150px;
       height: 150px;
-      background: rgba(255,255,255,0.1);
-      border: 2px solid black;
-      box-shadow: 0 0 10px black;
+      background: rgba(252, 106, 106, 0.534);
+      border: 2px solid white;
     }
 
     .front  { transform: rotateY(0deg) translateZ(75px); }
